Closed Bug 84519 Opened 23 years ago Closed 23 years ago

after doing history.go(+tooFar), must press back button many times to go back

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: jruderman, Assigned: radha)

References

Details

(Whiteboard: [br])

Attachments

(1 file)

Steps to reproduce:
1. Open a new browser window at your homepage.
2. Click a link.
3. javascript:history.go(5)
4. Try to go back to your homepage using the back button.

Results: 
- Must hit back 6 times to get back to the homepage.  
- The drop-down under the back button doesn't work.
- Lots of errors in the javascript console.

Expected: hitting back once goes back to the homepage.
See also bug 84527, history.go(-tooFar) disables session history.  Upgrading
this bug to major because if you use a very large positive number, the result is
basically the same as in bug 84527.
Severity: normal → major
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla0.9.3
Not platform specific.
OS: Windows NT → All
Hardware: PC → All
Missed the 0.9.3 train.
Whiteboard: [br]
Target Milestone: mozilla0.9.3 → mozilla0.9.4
*** Bug 84527 has been marked as a duplicate of this bug. ***
I think that for consistency and simplicity sake, the browser should do nothing
if the index that is provided by history.go() is unreachable, instead of trying
to go back or forward however far it can go. 
looks good.  r/sr=rpotts
a=asa on behalf of drivers pending r=
r=adamlock
Fix checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified Linux 2001090608.
Status: RESOLVED → VERIFIED
Component: History: Session → Document Navigation
QA Contact: claudius → docshell
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: